tests/compile_fail/variant_any_attr.rs
use test_strategy::Arbitrary;
#[derive(Arbitrary, Debug)]
enum X {
    #[any]
    A,
}

fn main() {}
